@@ -96,6 +96,7 @@
     To re-enable proxy settings pass -DENABLE_PROXY_CONFIG=ON to cmake.
 61. Add option to draw curent album cover as backdrop to play queue.
 62. Add 'Copy Songs To Device' action to playlists page.
+63. Copy Qt5 Linux system proxy code for Qt4 builds.
 
 1.0.3
 -----
